--- a/ConsultorioFront/consultorio-upb/src/app/globals.css
+++ b/ConsultorioFront/consultorio-upb/src/app/globals.css
@@ -97,6 +97,10 @@ p {
   color: bisque;
 
 }
+button {
+  text-emphasis-color: bisque;
+
+}
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 4rem;
